button styles fix (#131)
* button style fix

* Remove extra padding of some components

--- a/src/components/Button/Default/styles.scss
+++ b/src/components/Button/Default/styles.scss
@@ -27,10 +27,11 @@
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    padding: 17px 45px;
+    padding: 0 45px;
     position: relative;
     background: #EB5433;
     border-radius: 4px;
+    min-height: 45px;
   }
 
   &__black {
