--- a/src/scenes/ComingSoon/styles.module.scss
+++ b/src/scenes/ComingSoon/styles.module.scss
@@ -38,7 +38,6 @@
 
     Button {
       height: 45px;
-      padding-top: 12px;
     }
 
     Form {
@@ -100,7 +99,6 @@
     justify-content: space-between;
     Button {
       height: 45px;
-      padding-top: 12px;
       margin: 0 auto;
     }
 
