--- a/src/scenes/LandingV2/EmailForm/styles.module.scss
+++ b/src/scenes/LandingV2/EmailForm/styles.module.scss
@@ -45,7 +45,6 @@
       height: 45px;
       border-top-left-radius: 0;
       border-bottom-left-radius: 0;
-      padding-top: 12px;
     }
     @include for-phone-only {
       Input {
