--- a/src/scenes/PublishProduct/EndPublish/styles.module.scss
+++ b/src/scenes/PublishProduct/EndPublish/styles.module.scss
@@ -194,7 +194,6 @@
     margin-top: 15px;
     margin-bottom: 5%;
     button {
-      padding-top: 12px;
       height: 45px;
       margin-right: 35px;
       margin-bottom: 22px;
