--- a/src/scenes/PublishProduct/GroupForm/styles.module.scss
+++ b/src/scenes/PublishProduct/GroupForm/styles.module.scss
@@ -184,7 +184,6 @@
       }
     }    
     button {
-      padding-top: 12px;
       height: 45px;
       cursor: pointer;
       @include for-phone-only {
